CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(GenSim C CXX ASM)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/")

ENABLE_TESTING()

IF(NOT CMAKE_BUILD_TYPE)
	MESSAGE(WARNING "No build type was specified, so defaulting to DEBUG")
	SET(CMAKE_BUILD_TYPE DEBUG)
ENDIF()

IF("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG")
    ADD_DEFINITIONS("-DCONFIGSTRING=\"Debug\"")
ELSEIF("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    ADD_DEFINITIONS("-DCONFIGSTRING=\"Debug\"")
ELSEIF("${CMAKE_BUILD_TYPE}" STREQUAL "RELEASE")
	ADD_DEFINITIONS("-DCONFIGSTRING=\"Release\"")
ELSE()
	MESSAGE(SEND_ERROR "Unknown build type \"${CMAKE_BUILD_TYPE}\"")
ENDIF()

EXECUTE_PROCESS(
	COMMAND "hg" "id"
	OUTPUT_VARIABLE SCM_REV
	OUTPUT_STRIP_TRAILING_WHITESPACE
)

ADD_DEFINITIONS("-DSCM_REV=\"${SCM_REV}\"")

# Put things into an output directory
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist/bin)
set(ARCHSIM_MODULE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/archsim-modules)

function(TARGET_ADD_SOURCES target)
	foreach(source ${ARGN})
		TARGET_SOURCES(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${source})
	endforeach()
endfunction()

ADD_SUBDIRECTORY(archsim)
ADD_SUBDIRECTORY(gensim)

ADD_SUBDIRECTORY(support/libtrace)

ADD_SUBDIRECTORY(models)
