
archsim_add_sources(
	Assertion.cpp 
	main.cpp 
	system.cpp 
	signals.cpp 
	session.cpp
)



ADD_SUBDIRECTORY(abi)
ADD_SUBDIRECTORY(arch)
ADD_SUBDIRECTORY(blockjit)
ADD_SUBDIRECTORY(concurrent)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(gensim)
ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(tracing)
ADD_SUBDIRECTORY(translate)
ADD_SUBDIRECTORY(uarch)
ADD_SUBDIRECTORY(util)

SET(ARCHSIM_EXTRA_SOURCES "${ARCHSIM_EXTRA_SOURCES}" PARENT_SCOPE)
SET(ARCHSIM_EXTRA_TARGETS "${ARCHSIM_EXTRA_TARGETS}" PARENT_SCOPE)
